--- a/style.css
+++ b/style.css
@@ -1,13 +1,30 @@
 body {
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   font-weight: 500;
 }
 
 a {
   color: orange;
 }
-
 a:hover {
   color: black;
 }
-/*# sourceMappingURL=style.css.map */
+
+#boxes .minibox {
+  padding: 10px 0 0 10px;
+  margin: 10px 0 10px;
+  height: 150px;
+  width: 150px;
+  color: #ffffff;
+  background-color: #6d9176;
+}
+#boxes .primary {
+  position: absolute;
+  left: 350px;
+  top: 10px;
+}
+#boxes .secondary {
+  position: absolute;
+  left: 350px;
+  top: 170px;
+}/*# sourceMappingURL=style.css.map */
